<resources>
    <string name="app_name">Linguatheka</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="enter_word">Enter word</string>
    <string name="word">Word</string>
    <string name="phrases">Phrases</string>
    <string name="word_usage_examples">Examples</string>
    <string name="example">Example %d</string>
    <string name="add_example">Add example</string>
    <string name="text">Text</string>
    <string name="no_examples">Enter at least one examples</string>
    <string name="no_example">Enter example text</string>
    <string name="translation">Translation</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="bold">Bold</string>
    <string name="delete">Delete</string>
    <string name="reset_progress">Reset progress</string>
    <string name="repeat_card">Repeat card</string>
    <string name="fill_card">Fill card</string>
    <string name="view_card">View card</string>
    <string name="edit_card">Edit card</string>
    <string name="next_time_to_repeat">Next time to repeat:&#160;</string>
    <string name="confirm_reset">Do you really want to reset all progress for this card?</string>
    <string name="reset_for_added_example">It\'s recommended to reset the progress of the card in order to learn tha added example. Confirm the reset?</string>
    <string name="confirm_delete">Do you really want to delete this card?</string>
    <string name="fill_field">This field can\'t be empty</string>
    <string name="word_exist">A card with this word already exists. Add new examples to it</string>
    <string name="learned">Learned earlier:</string>
    <string name="channel_name">main_channel</string>
    <string name="channel_description">Main notifications</string>
    <string name="time_to_repeat">It\'s time to repeat the word</string>
    <string name="set_snooze_time">Set snooze time:</string>
    <string name="snooze">SNOOZE</string>
    <string name="reminder_snoozed_to">Reminder snoozed to&#160;</string>
    <string name="mark_done">Word was marked as repeated</string>
    <string name="done">DONE</string>
    <string name="confirm_avatar">Choose action with your avatar:</string>
    <string name="choose_new">CHOOSE</string>
    <string name="from_google" translatable="false">GOOGLE AVATAR</string>
    <string name="clear">CLEAR</string>
    <string name="close">CLOSE</string>
    <string name="not_show">Do not show again</string>
    <string name="htu_text">
        You can learn a new word in a foreign language by spending only 90 seconds for a month. \n
        1) When you meet a new word, you should create card for it in the app. In context. It means , you are not writing down a "word – translation", but a whole sentence in which a word has just met. And highlight the new word in bold. \n
        2) Within seven days from the moment the card was created, you read sentence from this card aloud once or twice. Yes, yes, only once or twice! No need to try to remember it, but you should concentrate on it and understand what you are saying (and not repeating mechanically). It takes 10 seconds for two readings (checked). You\'ve been doing this for seven days. \n
        3) After seven days of daily repetitions, you take a week break and a week later read card again aloud two or three times for 10 seconds. Yes, yes, only three times, but aloud, emotionally, clearly and concentrating on it! \n
        4) And two weeks later, you read it aloud again three times within 10 seconds. \n
        Total: 90 seconds (70 + 10 + 10 ). With this strategy, the word and sentence are literally cemented in your memory. And the app will remind you when to repeat.
    </string>
    <string name="donate_url" translatable="false">https://yoomoney.ru/to/410013592247120</string>


    //Nav menu
    <string name="choose_lang">Choose default language</string>
    <string name="settings">Settings</string>
    <string name="how_to_use">How to use</string>
    <string name="about_app">About app</string>
    <string name="donate">Donate me</string>
    <string name="stats_header">You\'ve learned:</string>
    <string name="stats_header_with_name">, you\'ve learned:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="of">of</string>
    <string name="sign_in">Sign in with Google</string>
    <string name="sign_out">Sign out of Google</string>
    <string name="drawer_open" translatable="false">Drawer open</string>
    <string name="drawer_close" translatable="false">Drawer close</string>

    //About app
    <string name="version">Current version:</string>
    <string name="author">Author:</string>
    <string name="author_contacts">Artem Danilov\n(dartx.apps@gmail.com)</string>
    <string name="method">Original method:</string>
    <string name="link" translatable="false">https://www.brejestovski.com</string>
    <string name="privacy">Privacy policy</string>
    <string name="agreement">User agreement</string>

    <!-- Preference Titles -->
    <string name="theme_settings_header">Themes</string>
    <string name="backup_setting_header">Google Drive backup and restore</string>
    <string name="about_user">About you</string>

    <!-- About user Preferences -->
    <string name="name_title">Your name</string>
    <string name="avatar">Chose avatar</string>
    <string name="avatar_applied">Your avatar applied</string>
    <string name="hide_login_button">Hide Sign in/out button</string>

    <!-- Languages Preferences -->

    <string name="choose_default_lang">Choose default language to learn</string>
    <string name="languages">Languages</string>
    <string name="choose_native_lang">Choose your native language</string>
    <string name="choose_lang_settings">Choose your language settings</string>

    <!-- Theme Preferences -->
    <string name="choose_theme">Choose theme</string>
    <string name="night_title">Night theme</string>
    <string name="night">Night mode</string>
    <string name="day">Day mode</string>
    <string name="system">Follow system</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

    <!-- Behavior Preferences -->

    <string name="auto_backup">Create backup ones per day</string>
    <string name="backup_now">Create backup manually</string>
    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hours</string>
    <string name="four_hours">4 hours</string>
    <string name="eight_hours">8 hours</string>

    <!-- BackUp to GD and Restore -->
    <string name="path" translatable="false">/data/data/ru.dartx.linguatheka/databases</string>
    <string name="db_path" translatable="false">/data/data/ru.dartx.linguatheka/databases/linguatheka.db</string>
    <string name="file_name" translatable="false">linguatheka.db</string>
    <string name="restore_message1">Do you really want to restore cards from Google Drive?</string>
    <string name="restore_message2">All cards created after last backup will be deleted.</string>
    <string name="login_to_google">Login to Google first to backup and restore cards</string>
    <string name="relogin_to_google">Re-login to Google and accept all permissions</string>
    <string name="try_later">Something went wrong. Try later.</string>
    <string name="grant_access">You should grant access to Google Services. Try again.</string>
    <string name="confirm_grant_access">You should grant access to Google Services and then activate the option again. Continue?</string>
    <string name="restore_item">Restore from Google Drive</string>
    <string name="restored_success">Cards have been restored successfully</string>
    <string name="restore_failed">Cards haven\'t been restored</string>
    <string name="backup_success">Backup have been made successfully</string>
    <string name="backup_failed">Backup haven\'t been made</string>
    <string name="no_internet">There is no connection to Internet</string>
    <string name="restore_started">Restore started</string>
    <string name="backup_started">Backup started</string>
    <string name="last_backup">Last copy: </string>
    <string name="show_hide_translation">Show/Hide translation</string>
    <string name="arrow_to_opened_translation">Arrow to opened translation</string>
    <string name="delete_button">Delete button</string>
    <string name="complete">Complete</string>
    <string name="saved">Card saved</string>
    <string name="card_deleted">Card deleted</string>


</resources>