<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="ru.dartx.linguatheka.R" />

        <variable
            name="exampleItemUiState"
            type="ru.dartx.linguatheka.domain.ExampleItemUiState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/tvWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <View
                android:id="@+id/learnedDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                android:visibility="@{exampleItemUiState.dividerVisibility ? View.VISIBLE : View.GONE}" />

            <TextView
                android:id="@+id/learnedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="1dp"
                android:text="@string/learned"
                android:visibility="@{exampleItemUiState.dividerVisibility ? View.VISIBLE : View.GONE}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivShowHide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/show_hide_translation"
                    app:srcCompat="@drawable/ic_show" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvExample"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{exampleItemUiState.example}"
                        android:textColor="?attr/mainText"
                        android:textSize="18sp"
                        tools:text="@string/example" />

                    <LinearLayout
                        android:id="@+id/translationWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <ImageView
                            android:id="@+id/ivArrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/arrow_to_opened_translation"
                            app:srcCompat="@drawable/ic_arrow" />

                        <TextView
                            android:id="@+id/tvTranslation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@{exampleItemUiState.translation}"
                            android:textColor="?attr/mainText"
                            android:textSize="18sp"
                            tools:text="@string/translation" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>